--- a/playground/async-await.html
+++ b/playground/async-await.html
@@ -15,10 +15,38 @@
       async function go() {
         console.log('Starting');
         await wait(2000);
+        console.log('Running');
+        await wait(1000);
         console.log('Ending');
       }
 
-      go();
+      //   go();
+
+      function makePizza(toppings = []) {
+        return new Promise(function (resolve, reject) {
+          // reject if people try with pineapple
+          if (toppings.includes('pineapple')) {
+            reject('Seriously? Get out 🍍');
+          }
+          const amountOfTimeToBake = 500 + toppings.length * 200;
+          // wait 1 second for the pizza to cook:
+          setTimeout(function () {
+            // when you are ready, you can resolve this promise
+            resolve(
+              `Here is your pizza 🍕 with the toppings ${toppings.join(' ')}.`
+            );
+          }, amountOfTimeToBake);
+          // if something went wrong, we can reject this promise;
+        });
+      }
+
+      async function makeDinner() {
+        const pizzaPromise1 = await makePizza(['pepperoni']);
+        const pizzaPromise2 = await makePizza(['mushrooms']);
+        const [pep, mush] = await Promise.all([pizzaPromise1, pizzaPromise2]);
+        console.log(pep, mush);
+      }
+      makeDinner();
     </script>
   </body>
 </html>
