Cathes the error

--- a/playground/apis.html
+++ b/playground/apis.html
@@ -31,7 +31,7 @@
         console.log(err);
       }
 
-      displayUser('wesbos');
+      displayUser('justinsixsmith').catch(handleError);
     </script>
   </body>
 </html>
