--- a/Wes Bos Exercises/Dad Jokes/index.html
+++ b/Wes Bos Exercises/Dad Jokes/index.html
@@ -86,6 +86,6 @@
       </button>
     </div>
 
-    <script src="./jokes.js"></script>
+    <script src="./jokes.js" type="module"></script>
   </body>
 </html>
