--- a/JavaScript30/01 - JavaScript Drum Kit/index-START.html
+++ b/JavaScript30/01 - JavaScript Drum Kit/index-START.html
@@ -58,7 +58,9 @@
 
     <script>
       window.addEventListener('keydown', function (e) {
-        console.log(e);
+        const audio = document.querySelector(`audio[data-key="${e.keyCode}"]`);
+        if (!audio) return;
+        audio.play();
       });
     </script>
   </body>
