--- a/JavaScript30/09 - Dev Tools Domination/index-START.html
+++ b/JavaScript30/09 - Dev Tools Domination/index-START.html
@@ -1,47 +1,90 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Console Tricks!</title>
-  <link rel="icon" href="https://fav.farm/🔥" />
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <title>Console Tricks!</title>
+    <link rel="icon" href="https://fav.farm/🔥" />
+  </head>
+  <body>
+    <p onClick="makeGreen()">×BREAK×DOWN×</p>
 
-  <p onClick="makeGreen()">×BREAK×DOWN×</p>
+    <script>
+      const dogs = [
+        { name: 'Snickers', age: 2 },
+        { name: 'hugo', age: 8 },
+      ];
 
-  <script>
-    const dogs = [{ name: 'Snickers', age: 2 }, { name: 'hugo', age: 8 }];
+      function makeGreen() {
+        const p = document.querySelector('p');
+        p.style.color = '#BADA55';
+        p.style.fontSize = '50px';
+      }
 
-    function makeGreen() {
+      // Regular
+      console.log('hello');
+
+      // Interpolated
+      const thing = 'thing';
+      console.log('Hello, I am a %s string.', 'thing');
+      console.log(`Hello, I am a ${thing} string.`);
+
+      // Styled
+      // console.log(
+      //   '%c I am some great text.',
+      //   'font-size: 20px; background: red; text-shadow: 2px 2px 0 blue'
+      // );
+
+      // warning!
+      console.warn('Ohh, No!@');
+
+      // Error :|
+      console.error('Darn it!');
+
+      // Info
+      console.info('Crocodiles eat 3-4 people per year.');
+
+      // Testing
       const p = document.querySelector('p');
-      p.style.color = '#BADA55';
-      p.style.fontSize = '50px';
-    }
+      console.assert(p.classList.contains('ouch'), 'That is wrong.');
 
-    // Regular
+      // clearing
+      console.clear();
 
-    // Interpolated
+      // Viewing DOM Elements
+      console.log(p);
+      console.dir(p);
 
-    // Styled
+      console.clear();
 
-    // warning!
+      // Grouping together
+      dogs.forEach((dog) => {
+        console.groupCollapsed(`${dog.name}`);
+        console.log(dog.name);
+        console.log(`${dog.name} is ${dog.age} years old`);
+        console.log(`${dog.name} is ${dog.age * 7} years old in dog years.`);
+        console.groupEnd(`${dog.name}`);
+      });
 
-    // Error :|
+      // counting
+      console.count('count');
+      console.count('count');
+      console.count('count');
+      console.count('count');
+      console.count('count');
+      console.count('count');
 
-    // Info
+      console.clear();
 
-    // Testing
+      // timing
+      console.time('fetching data');
+      fetch('https://api.github.com/users/wesbos')
+        .then((response) => response.json())
+        .then((data) => {
+          console.timeEnd('fetching data');
+          console.log(data);
+        });
 
-    // clearing
-
-    // Viewing DOM Elements
-
-    // Grouping together
-
-    // counting
-
-    // timing
-
-  </script>
-</body>
+      console.table(dogs);
+    </script>
+  </body>
 </html>
