--- a/JavaScript30/15 - LocalStorage/index-START.html
+++ b/JavaScript30/15 - LocalStorage/index-START.html
@@ -52,12 +52,22 @@
         <input type="text" name="item" placeholder="Item Name" required />
         <input type="submit" value="+ Add Item" />
       </form>
+      <div class="check-all-container">
+        <button class="check-all" id="done">Done</button>
+        <label for="done">Mark all as complete</label>
+      </div>
+      <div class="check-all-container">
+        <button class="uncheck-all" type="checkbox" id="clear">Clear</button>
+        <label for="clear">Mark all as incomplete</label>
+      </div>
     </div>
 
     <script>
       const addItems = document.querySelector(".add-items");
       const itemsList = document.querySelector(".plates");
       const items = JSON.parse(localStorage.getItem("items")) || [];
+      const checkAll = document.querySelector(".check-all");
+      const uncheckAll = document.querySelector(".uncheck-all");
 
       function addItem(e) {
         e.preventDefault();
@@ -96,8 +106,26 @@
         populateList(items, itemsList);
       }
 
+      function checkAllItems() {
+        items.forEach((item) => {
+          item.done = true;
+        });
+        localStorage.setItem("items", JSON.stringify(items));
+        populateList(items, itemsList);
+      }
+
+      function uncheckAllItems() {
+        items.forEach((item) => {
+          item.done = false;
+        });
+        localStorage.setItem("items", JSON.stringify(items));
+        populateList(items, itemsList);
+      }
+
       addItems.addEventListener("submit", addItem);
       itemsList.addEventListener("click", toggleDone);
+      checkAll.addEventListener("click", checkAllItems);
+      uncheckAll.addEventListener("click", uncheckAllItems);
       populateList(items, itemsList);
     </script>
   </body>
